@@ -33,6 +33,7 @@ import com.google.common.primitives.Ints;
 import org.apache.cassandra.dht.ByteOrderedPartitioner;
 import org.apache.cassandra.dht.Token;
 import org.apache.cassandra.gms.Gossiper;
+import org.apache.cassandra.locator.AbstractNetworkTopologySnitch;
 import org.apache.cassandra.locator.EndpointsForToken;
 import org.apache.cassandra.locator.ReplicaPlan;
 import org.junit.Assert;
@@ -90,13 +91,20 @@ public abstract  class AbstractReadRepairTest
     static InetAddressAndPort target1;
     static InetAddressAndPort target2;
     static InetAddressAndPort target3;
+    static InetAddressAndPort remote1;
+    static InetAddressAndPort remote2;
+    static InetAddressAndPort remote3;
     static List<InetAddressAndPort> targets;
+    static List<InetAddressAndPort> remotes;
 
     static Replica replica1;
     static Replica replica2;
     static Replica replica3;
     static EndpointsForRange replicas;
-    static ReplicaPlan.ForRead<?> replicaPlan;
+    static Replica remoteReplica1;
+    static Replica remoteReplica2;
+    static Replica remoteReplica3;
+    static EndpointsForRange remoteReplicas;
 
     static long now = TimeUnit.NANOSECONDS.toMicros(System.nanoTime());
     static DecoratedKey key;
@@ -214,6 +222,66 @@ public abstract  class AbstractReadRepairTest
     static void configureClass(ReadRepairStrategy repairStrategy) throws Throwable
     {
         SchemaLoader.loadSchema();
+
+        DatabaseDescriptor.setEndpointSnitch(new AbstractNetworkTopologySnitch()
+        {
+            public String getRack(InetAddressAndPort endpoint)
+            {
+                return "rack1";
+            }
+
+            public String getDatacenter(InetAddressAndPort endpoint)
+            {
+                byte[] address = endpoint.addressBytes;
+                if (address[1] == 2) {
+                    return "datacenter2";
+                }
+                return "datacenter1";
+            }
+        });
+
+        target1 = InetAddressAndPort.getByName("127.1.0.255");
+        target2 = InetAddressAndPort.getByName("127.1.0.254");
+        target3 = InetAddressAndPort.getByName("127.1.0.253");
+
+        remote1 = InetAddressAndPort.getByName("127.2.0.255");
+        remote2 = InetAddressAndPort.getByName("127.2.0.254");
+        remote3 = InetAddressAndPort.getByName("127.2.0.253");
+
+        targets = ImmutableList.of(target1, target2, target3);
+        remotes = ImmutableList.of(remote1, remote2, remote3);
+
+        replica1 = fullReplica(target1, FULL_RANGE);
+        replica2 = fullReplica(target2, FULL_RANGE);
+        replica3 = fullReplica(target3, FULL_RANGE);
+        replicas = EndpointsForRange.of(replica1, replica2, replica3);
+
+        remoteReplica1 = fullReplica(remote1, FULL_RANGE);
+        remoteReplica2 = fullReplica(remote2, FULL_RANGE);
+        remoteReplica3 = fullReplica(remote3, FULL_RANGE);
+        remoteReplicas = EndpointsForRange.of(remoteReplica1, remoteReplica2, remoteReplica3);
+
+        StorageService.instance.getTokenMetadata().clearUnsafe();
+        StorageService.instance.getTokenMetadata().updateNormalToken(ByteOrderedPartitioner.instance.getToken(ByteBuffer.wrap(new byte[] { 0 })), replica1.endpoint());
+        StorageService.instance.getTokenMetadata().updateNormalToken(ByteOrderedPartitioner.instance.getToken(ByteBuffer.wrap(new byte[] { 1 })), replica2.endpoint());
+        StorageService.instance.getTokenMetadata().updateNormalToken(ByteOrderedPartitioner.instance.getToken(ByteBuffer.wrap(new byte[] { 2 })), replica3.endpoint());
+        StorageService.instance.getTokenMetadata().updateNormalToken(ByteOrderedPartitioner.instance.getToken(ByteBuffer.wrap(new byte[] { 3 })), remoteReplica1.endpoint());
+        StorageService.instance.getTokenMetadata().updateNormalToken(ByteOrderedPartitioner.instance.getToken(ByteBuffer.wrap(new byte[] { 4 })), remoteReplica2.endpoint());
+        StorageService.instance.getTokenMetadata().updateNormalToken(ByteOrderedPartitioner.instance.getToken(ByteBuffer.wrap(new byte[] { 5 })), remoteReplica3.endpoint());
+
+        for (Replica replica : replicas)
+        {
+            UUID hostId = UUID.randomUUID();
+            Gossiper.instance.initializeNodeUnsafe(replica.endpoint(), hostId, 1);
+            StorageService.instance.getTokenMetadata().updateHostId(hostId, replica.endpoint());
+        }
+        for (Replica replica : remoteReplicas)
+        {
+            UUID hostId = UUID.randomUUID();
+            Gossiper.instance.initializeNodeUnsafe(replica.endpoint(), hostId, 1);
+            StorageService.instance.getTokenMetadata().updateHostId(hostId, replica.endpoint());
+        }
+
         String ksName = "ks";
 
         String ddl = String.format("CREATE TABLE tbl (k int primary key, v text) WITH read_repair='%s'",
@@ -221,35 +289,14 @@ public abstract  class AbstractReadRepairTest
 
         cfm = CreateTableStatement.parse(ddl, ksName).build();
         assert cfm.params.readRepair == repairStrategy;
-        KeyspaceMetadata ksm = KeyspaceMetadata.create(ksName, KeyspaceParams.simple(3), Tables.of(cfm));
-        MigrationManager.announceNewKeyspace(ksm, false);
+        KeyspaceMetadata ksm = KeyspaceMetadata.create(ksName, KeyspaceParams.nts("datacenter1", 3, "datacenter2", 3), Tables.of(cfm));
+        MigrationManager.announceNewKeyspace(ksm, true);
 
         ks = Keyspace.open(ksName);
         cfs = ks.getColumnFamilyStore("tbl");
 
         cfs.sampleReadLatencyNanos = 0;
         cfs.additionalWriteLatencyNanos = 0;
-
-        target1 = InetAddressAndPort.getByName("127.0.0.255");
-        target2 = InetAddressAndPort.getByName("127.0.0.254");
-        target3 = InetAddressAndPort.getByName("127.0.0.253");
-
-        targets = ImmutableList.of(target1, target2, target3);
-
-        replica1 = fullReplica(target1, FULL_RANGE);
-        replica2 = fullReplica(target2, FULL_RANGE);
-        replica3 = fullReplica(target3, FULL_RANGE);
-        replicas = EndpointsForRange.of(replica1, replica2, replica3);
-
-        replicaPlan = replicaPlan(ConsistencyLevel.QUORUM, replicas);
-
-        StorageService.instance.getTokenMetadata().clearUnsafe();
-        StorageService.instance.getTokenMetadata().updateNormalToken(ByteOrderedPartitioner.instance.getToken(ByteBuffer.wrap(new byte[] { 0 })), replica1.endpoint());
-        StorageService.instance.getTokenMetadata().updateNormalToken(ByteOrderedPartitioner.instance.getToken(ByteBuffer.wrap(new byte[] { 1 })), replica2.endpoint());
-        StorageService.instance.getTokenMetadata().updateNormalToken(ByteOrderedPartitioner.instance.getToken(ByteBuffer.wrap(new byte[] { 2 })), replica3.endpoint());
-        Gossiper.instance.initializeNodeUnsafe(replica1.endpoint(), UUID.randomUUID(), 1);
-        Gossiper.instance.initializeNodeUnsafe(replica2.endpoint(), UUID.randomUUID(), 1);
-        Gossiper.instance.initializeNodeUnsafe(replica3.endpoint(), UUID.randomUUID(), 1);
 
         // default test values
         key  = dk(5);
@@ -292,12 +339,23 @@ public abstract  class AbstractReadRepairTest
         return repairPlan(replicaPlan(liveAndDown, targets), liveAndDown);
     }
 
+    static ReplicaPlan.ForTokenWrite repairPlan(ReplicaPlan.ForRangeRead readPlan, EndpointsForRange liveAndDown, EndpointsForToken pending)
+    {
+        Token token = readPlan.range().left.getToken();
+        return ReplicaPlans.forWrite(readPlan.keyspace(),
+                                     readPlan.consistencyLevel(),
+                                     liveAndDown.forToken(token),
+                                     pending,
+                                     replica -> true,
+                                     ReplicaPlans.writeReadRepair(readPlan));
+    }
+
     static ReplicaPlan.ForTokenWrite repairPlan(ReplicaPlan.ForRangeRead readPlan, EndpointsForRange liveAndDown)
     {
         Token token = readPlan.range().left.getToken();
         EndpointsForToken pending = EndpointsForToken.empty(token);
         return ReplicaPlans.forWrite(readPlan.keyspace(),
-                                     ConsistencyLevel.TWO,
+                                     readPlan.consistencyLevel(),
                                      liveAndDown.forToken(token),
                                      pending,
                                      replica -> true,
@@ -305,7 +363,7 @@ public abstract  class AbstractReadRepairTest
     }
     static ReplicaPlan.ForRangeRead replicaPlan(EndpointsForRange replicas, EndpointsForRange targets)
     {
-        return replicaPlan(ks, ConsistencyLevel.QUORUM, replicas, targets);
+        return replicaPlan(ks, ConsistencyLevel.LOCAL_QUORUM, replicas, targets);
     }
     static ReplicaPlan.ForRangeRead replicaPlan(Keyspace keyspace, ConsistencyLevel consistencyLevel, EndpointsForRange replicas)
     {
